[tool.poetry]
name = "ConvAssist"
version = "0.1.0"
description = ""
authors = ["Intel Corporation"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.4.1"
websockets = "^13.0.1"
nltk = "^3.9.1"
hnswlib = "^0.8.0"
sentence-transformers = "^3.1.1"
spacy = "^3.8.2"
sv-ttk = {version = "^2.6.0", optional = true, markers = "sys_platform == 'win32'"}
pywin32 = {version = "^306", optional = true, markers = "sys_platform == 'win32'"}
pystray = {version = "^0.19.5", optional = true, markers = "sys_platform == 'win32'"}
pyinstaller = {version = "^6.10.0", optional = true, markers = "sys_platform == 'win32'"}
pydebugstring = {version = "^1.0.0.2", markers = "sys_platform == 'win32'"}
pyttsx3 = {version = "^2.97", optional = true }
pefile = {version = "<2024.8.26", optional = true, markers = "sys_platform == 'win32'"} # pinned to avoid breaking changes in newer versions
colorlog = "^6.9.0"
kagglehub = "^0.3.12"
pandas = "^2.2.3"
psutil = "^6.1.1"
concurrent-log-handler = "^0.9.25"
pyspellchecker = "^0.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"
backpedal = "^0.9.14"
parameterized = "^0.9.0"

[tool.poetry.extras]
acat_interface = ["sv-ttk", "pywin32", "pystray", "pyinstaller"]
demos = ["pyttsx3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
