[project]
name = "convassist"
version = "0.2.0"
description = ""
authors = [
    {name = "Intel Corporation"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.9.0",
    "websockets>=13.0.1",
    "nltk>=3.9.3",
    "hnswlib>=0.8.0",
    "sentence-transformers>=3.1.1",
    "spacy>=3.8.2",
    "pywin32>=311; sys_platform == 'win32'",
    "pydebugstring>=1.0.0.2; sys_platform == 'win32'",
    "colorlog>=6.9.0",
    "kagglehub>=0.3.13",
    "pandas>=2.3.1",
    "psutil>=6.1.1",
    "concurrent-log-handler>=0.9.25",
    "pyspellchecker>=0.8.2",
    "textual>=1.0.0",
]

[project.optional-dependencies]
acat_interface = [
    "sv-ttk>=2.6.0; sys_platform == 'win32'",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "pyinstaller>=6.15.0; sys_platform == 'win32'",
    "pefile<2024.8.26; sys_platform == 'win32'", # pinned to avoid breaking changes in newer versions
]
demos = [
    "pyttsx3>=2.99",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-timeout>=2.3.1",
    "pytest-cov>=5.0.0",
    "backpedal>=0.9.14",
    "parameterized>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["convassist"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
