[tool.poetry]
name = "acatconvassist"
version = "0.1.0"
description = "Interface for ConvAssist to provide prediction capabilities for ACAT"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13"
sv-ttk = {version = "^2.6.0", markers = "sys_platform == 'win32'"}
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}
pystray = {version = "^0.19.5", markers = "sys_platform == 'win32'"}
pyinstaller = {version = "^6.10.0", optional = true, markers = "sys_platform == 'win32'"}
pydebugstring = {version = "^1.0.0.2", markers = "sys_platform == 'win32'"}
convassist = {path = "../../../", develop = true}
pefile = "^2024.8.26"
hnswlib = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"

[tool.poetry.extras]
dev = ["pytest", "pytest-timeout", "pytest-cov"]
acat_interface = ["sv-ttk", "pywin32", "pystray", "pyinstaller", "pydebugstring"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
